--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
-<head>
-    <meta http-equiv="refresh" content="5;url=https://b23.tv/t2xSCw1">
-</head>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>伏哥de官方网站</title>
+        <style>
+            body {
+                text-align: center;
+                padding: 50px;
+            }
+        </style>
+    </head>
+    <body>
+        <h1>Oh~这里什么也没有</h1>
+        <a href="https://b23.tv/3BOwBTQ">去伏哥的B站看看吧!</a>
+    </body>
+</html>
