--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </style>
     </head>
     <body>
-        <img src="vogel_j.jpg" />
+        <img src="IMG_20220204_131556.jpg" />
         <h1>Oh~这里什么也没有</h1>
         <a href="https://b23.tv/3BOwBTQ">去伏哥的B站看看吧!</a>
     </body>
